# pecunia

./: .env  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
.github/workflow/: rust.yml
.github/workflows/: publish_docker.yml  rust.yml
migrations/: 20210617131130_create_intraday_price_table.sql
src/: cli.rs  configuration.rs  database.rs  handler.rs  lib.rs  main.rs
src/client/: mod.rs
src/model/: company.rs  intraday_prices.rs  mod.rs
